[package]
name = "web_components"
version = "0.1.0"
authors = ["WorldSEnder <WorldSEnder@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { path = "../../packages/yew", features = ["csr"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "*"

[dependencies.web-sys]
version = "0.3"
features = [
    "CustomElementRegistry",
    "ElementDefinitionOptions",
    "ShadowRootInit",
    "ShadowRootMode",
]
